<resources>
    <string name="app_name">啦啦啦快递</string>
    <string name="tab_bar_home">首页</string>
    <string name="tab_bar_task">任务</string>
    <string name="tab_bar_customer">客户</string>
    <string name="tab_bar_me">我</string>


    <string name="scan_gun">扫描入口</string>

    <string name="title_section1">功能选择</string>
    <string name="title_section2">派送任务</string>
    <string name="title_section3">揽收任务</string>
    <string name="title_section4">转运任务</string>
    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="action_new">新建</string>
    <string name="action_refresh">刷新</string>
    <string name="action_edit">编辑</string>
    <string name="action_reset">清除</string>
    <string name="action_ok">完成</string>
    <string name="action_login">登录</string>
    <string name="action_logout">退出系统</string>
    <string name="action_my_package">我的包裹</string>
    <string name="action_my_message">我的消息</string>
    <string name="action_my_location">我的位置</string>
    <string name="title_activity_region_list">选择行政区</string>
    <string name="title_activity_customer_list">客户列表</string>
    <string name="title_activity_customer_edit">客户信息</string>
    <string name="title_name">姓名：</string>
    <string name="title_tel_code">电话：</string>
    <string name="title_addr_code">地址：</string>
    <string name="title_post_code">邮编：</string>
    <string name="app_picker_name">应用</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>

    <string name="title_activity_login">登录</string>
    <!-- Strings related to login -->
    <string name="prompt_email">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登 入</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">手机号格式不正确</string>
    <string name="error_empty_password">请输入密码</string>
    <string name="error_invalid_password">密码过短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">请输入账号</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permission_camera">App扫码需要用到拍摄权限</string>
    <string name="permission_external_storage">App需要用到读写权限</string>
    <string name="tips_scan_code">将二维码/条形码放入框内，即可自动扫码</string>
    <string name="qr_code">二维码</string>
    <string name="bar_code">条形码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_customer_search">CustomerSearchActivity</string>
    <string name="title_addr_detail">详细地址</string>
    <string name="title_activity_node_list">网点列表</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="save">保存</string>
    <string name="hint_enter_customer_name">请输入客户姓名</string>
    <string name="avatar">头像</string>
    <string name="express_node">网点</string>
    <string name="action_logout_account">退出账号</string>
    <string name="add_coustmer">添加客户</string>
    <string name="customer_manage">客户管理</string>
    <string name="express_fee">快递费</string>
    <string name="express_insurance">保险费</string>
    <string name="express_weight">物品重量</string>
    <string name="hint_select_type_of_express">点击选择物品类型</string>
    <string name="rmb">RMB</string>
    <string name="kg">kg</string>
    <string name="hint_enter_express_id_for_search">输入准确快递单号查询</string>
    <string name="hint_customer_selected">提示：点击即可选中客户;长按可进入编辑页面 \t\t\t\t 【知道啦】</string>
</resources>
