<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/size_14sp"
    android:background="@drawable/main_function_bg_selector">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="12dp"
        android:text="@string/title_name" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:text="@string/title_tel_code" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:text="@string/title_addr_code" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="27dp"
        android:text="@string/title_addr_detail" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/textView1"
        android:ems="15"
        android:inputType="text|textPersonName" >
    </EditText>

    <EditText
        android:id="@+id/edtTelCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/edtName"
        android:layout_marginBottom="100px"
        android:ems="16"
        android:inputType="textPhonetic|phone" />

    <EditText
        android:id="@+id/unedtAddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/edtName"
        android:ems="16"
        android:text="选择省市区"
        android:textAlignment="center"
        android:inputType="textPostalAddress" />


    <EditText
        android:id="@+id/edtDpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_marginLeft="16dp"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/textView5"
        android:ems="15"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/edtDpt"
        android:layout_marginTop="20dp"
        android:text="@string/title_post_code" />

    <EditText
        android:id="@+id/edtPostCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_marginLeft="16dp"
        android:layout_alignLeft="@+id/edtName"
        android:ems="16"
        android:inputType="textPhonetic|phone" />
    <Button
        android:onClick="click"
        android:layout_below="@+id/edtPostCode"
        android:layout_width="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_height="wrap_content"
        style="@style/default_button"
        android:text="提交" />
</RelativeLayout>