<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingRight="@dimen/size_18sp"
    android:paddingLeft="@dimen/size_18sp"
    android:orientation="vertical">

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ly_node_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/size_14sp"
        android:background="@drawable/menu_bg_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_18sp"
            android:id="@+id/node_title"
            android:text="@string/title_name" />
        <TextView
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_18sp"
            android:id="@+id/node_code"
            android:text="@string/title_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_customer_manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:gravity="center_vertical">
        <RadioButton
            android:gravity="center_vertical"
            android:buttonTint="@color/colorAccent"
            android:id="@+id/rb_selected"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:background="@drawable/menu_bg_normal">
            <ImageView
                android:id="@+id/image"
                android:layout_marginRight="@dimen/size_14sp"
                android:src="@mipmap/anonymous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_toRightOf="@+id/image"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size_18sp"
                android:id="@+id/recy_item1"
                android:text="@string/title_name" />
            <TextView
                android:layout_toRightOf="@+id/recy_item1"
                android:gravity="center_vertical"
                android:layout_alignBaseline="@+id/recy_item1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_14sp"
                android:textSize="@dimen/size_16sp"
                android:id="@+id/recy_item2"
                android:text="@string/title_tel_code"/>
            <TextView
                android:layout_toRightOf="@+id/image"
                android:id="@+id/more_detail"
                android:singleLine="true"
                android:layout_below="@+id/recy_item1"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:text="@string/title_addr_detail"
                android:textColor="@color/colorGray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>



</LinearLayout>

