<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:scrollbars="none"
    android:background="@color/bg_gray">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/linear_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/size_16sp"
            android:paddingBottom="30px"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/ly_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginBottom="@dimen/size_18sp"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/anonymous" />
                <TextView
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"
                    android:text="@string/action_sign_in"/>
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/ly_myInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:visibility="gone">
                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="18dp"
                    android:src="@mipmap/anonymous" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical"
                    android:gravity="left|center_vertical">
                    <TextView
                        android:id="@+id/login_big_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Vivian"
                        android:textSize="20dp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="欢迎您 >"/>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
            <LinearLayout
                android:id="@+id/menu_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_selector"
                android:orientation="horizontal"
                style="@style/menu_style">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@mipmap/icon_express_receive"/>
                <TextView
                    style="@style/menu_style_no_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_my_package"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_2"
                android:layout_below="@id/menu_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_selector"
                android:orientation="horizontal"
                style="@style/menu_style">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@mipmap/icon_message"/>
                <TextView
                    style="@style/menu_style_no_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_my_message"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/menu_3"
                android:layout_below="@id/menu_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_selector"
                android:orientation="horizontal"
                style="@style/menu_style">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@mipmap/ic_position"/>
                <TextView
                    style="@style/menu_style_no_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_my_location"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/size_16sp"
                android:id="@+id/menu_4"
                android:layout_below="@id/menu_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_selector"
                android:orientation="horizontal"
                style="@style/menu_style">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@mipmap/icon_search_orange"/>
                <TextView
                    style="@style/menu_style_no_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_settings"/>
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/sign"
                android:layout_below="@id/menu_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16sp"
                android:background="@drawable/menu_selector"
                android:layout_gravity="bottom"
                style="@style/menu_style">
                <ImageView

                    android:id="@+id/icon"
                    android:layout_centerVertical="true"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@mipmap/express_task"/>
                <Button
                    android:layout_toRightOf="@+id/icon"
                    android:id="@+id/button_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:text="@string/action_sign_in"
                    android:background="@color/transparent"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/text_in_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="hello "
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:visibility="visible"
                android:layout_below="@+id/sign"/>
        </RelativeLayout>


    </LinearLayout>
</ScrollView>